# openstack-voms-auth-type

./: README.md  README.rst  requirements.txt  setup.cfg  setup.py
openstack_voms_auth_type/: get_tenants.py  plugin.py  utils.py  v2.py  v2voms.py  v3.py
