[metadata]
name = openstack-voms-auth-type
summary = VOMS-based v2 authentication for OpenStack 
description-file =
    README.rst
author = Enol Fernandez 
author-email = enol.fernandez@egi.eu
home-page = https://github.com/enolfc/openstack-voms-auth-type
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    openstack_voms_auth_type

[entry_points]
keystoneauth1.plugin =
    v2voms = openstack_voms_auth_type.plugin:VomsLoader
